# E-Gradebook

client/: .gitignore  AddStudentWindow.cpp  AddStudentWindow.hpp  BaseWindow.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Database.cpp  Database.hpp  MenuWindow.cpp  MenuWindow.hpp  WindowType.hpp  grade.hpp  main.cpp  start.sh  student.hpp  subject.hpp
client/components/: BaseWindow.hpp  Button.cpp  Button.hpp
client/database/: Database.cpp  Database.hpp
client/database/models/: grade.hpp  gradeEntry.hpp  student.hpp  subject.hpp
client/database/responses/: gradesByClassNumber.hpp
client/views/: MenuWindow.cpp  MenuWindow.hpp
client/views/grades/: AddGradeWindow.cpp  AddGradeWindow.hpp  ViewGradesWindow.cpp  ViewGradesWindow.hpp
client/views/students/: AddStudentWindow.cpp  AddStudentWindow.hpp  MoreStudentsInfoWindow.cpp  MoreStudentsInfoWindow.hpp  ViewStudentsWindow.cpp  ViewStudentsWindow.hpp
client/views/subjects/: AddSubjectWindow.cpp  AddSubjectWindow.hpp  ViewSubjectsWindow.cpp  ViewSubjectsWindow.hpp
